# AISentinel

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  go.mod  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  publish-mcp-registry.yml
bundles/aisentinel/: manifest.json
bundles/aisentinel-sidecar/: manifest.json
cmd/aisentinel/: main.go
cmd/aisentinel-sidecar/: main.go
docs/: AWESOME_MCP_PR.md  DEMO.md  DISTRIBUTION_CHECKLIST.md  HOMEBREW_TAP.md  LAUNCH_POSTS.md  SECURITY_AUDIT.md  SUBMISSION_GUIDE.md  event-schema.md  quickstart.md  threat-model.md
examples/echo-server/: main.go
examples/langgraph/: README.md  example.py
internal/buildinfo/: buildinfo.go
internal/iox/: locked_line_writer.go  locked_line_writer_test.go
internal/logger/: jsonl.go  jsonl_test.go
internal/policy/: engine.go  engine_test.go  resolve_test.go
internal/secrets/: secrets.go  secrets_test.go
internal/server/: server.go
policies/: audit-only.yaml  default.yaml  embed.go  embed_test.go  mcp-test.yaml  planet-prod.yaml  strict.yaml
